# rust-article-recorder

./: .env  .env.example  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
.github/workflows/: deploy.yml
docs/: 1.md  2.md  3.md  4.md
src/: main.rs
src/handlers/: article.rs  auth.rs
src/middleware/: auth.rs
src/models/: article.rs  user.rs
